--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.13",
+    "graphql": "^15.6.0",
     "react": "17.0.2",
     "react-native": "0.65.1"
   },
