--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ build/
 .gradle
 local.properties
 *.iml
+/android/app/release/
+
+# Visual Studio Code
+#
+.vscode/
 
 # node.js
 #
@@ -57,3 +62,6 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+#
+.env
