--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
-    "prettier": "prettier --write *.ts*"
+    "prettier": "prettier --write *.ts*",
+    "gen-types": "cd src/graphql && npx apollo client:download-schema --endpoint=http://localhost:4000/graphiql schema.json && npx apollo codegen:generate --localSchemaFile=schema.json --target=typescript --tagName=gql"
   },
   "husky": {
     "hooks": {
@@ -35,11 +36,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.65.0",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
+    "apollo": "^2.33.6",
     "babel-jest": "^26.6.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
