--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
-    "lib": [
-      "es2019"
-    ],
+    "lib": ["es2019"],
     "allowJs": true,
     "jsx": "react-native",
     "noEmit": true,
@@ -15,9 +13,7 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@assets": [
-        "./src/assets"
-      ]
+      "@assets": ["./src/assets"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true
@@ -26,6 +22,7 @@
     "node_modules",
     "babel.config.js",
     "metro.config.js",
-    "jest.config.js"
+    "jest.config.js",
+    "src/graphql/__generated__/*.ts"
   ]
 }
