--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@apollo/client": "^3.4.13",
     "graphql": "^15.6.0",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-config": "^1.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
