--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.13",
+    "@helium/currency": "^3.25.1",
+    "@react-native-async-storage/async-storage": "^1.15.8",
+    "apollo3-cache-persist": "^0.13.0",
     "graphql": "^15.6.0",
     "react": "17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-native": "0.65.1",
     "react-native-config": "^1.4.4"
   },
