--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "@shopify/restyle": "^1.4.0",
     "apollo3-cache-persist": "^0.13.0",
     "graphql": "^15.6.0",
+    "i18next": "^21.1.1",
     "react": "17.0.2",
     "react-async-hook": "^4.0.0",
+    "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
     "react-native-config": "^1.4.4",
+    "react-native-localize": "^2.1.4",
     "react-native-safe-area-context": "^3.3.2",
     "tinycolor2": "^1.4.2",
     "use-debounce": "^7.0.0"
@@ -46,6 +49,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@types/graphql": "^14.5.0",
+    "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.65.0",
     "@types/react-test-renderer": "^17.0.1",
