--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
     "react-native-config": "^1.4.4",
+    "react-native-icloudstore": "^0.9.0",
     "react-native-localize": "^2.1.4",
     "react-native-safe-area-context": "^3.3.2",
     "tinycolor2": "^1.4.2",
