--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "@helium/crypto-react-native": "^3.43.1",
     "@helium/currency": "^3.25.1",
     "@react-native-async-storage/async-storage": "^1.15.8",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
+    "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
     "@shopify/restyle": "^1.4.0",
     "apollo3-cache-persist": "^0.13.0",
     "expo-haptics": "^10.1.0",
