--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx && tsc",
+    "android-clean": "cd android && ./gradlew clean && cd ..",
+    "ios-clean": "rm -rf ios/Pods && rm -rf ios/build",
+    "pod-install": "cd ios && pod install && cd ..",
+    "clean-install": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn install && yarn android-clean && yarn ios-clean && yarn pod-install",
     "bump-patch": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type patch",
     "bump-minor": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type minor",
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
     "prettier": "prettier --write *.ts*",
-    "gen-types": "cd src/graphql && npx apollo client:download-schema --endpoint=https://nova-wallet-api.herokuapp.com/api/graphiql schema.json && npx apollo codegen:generate --localSchemaFile=schema.json --target=typescript --tagName=gql",
-    "gen-types-local": "cd src/graphql && npx apollo client:download-schema --endpoint=http://localhost:4000/api/graphiql schema.json && npx apollo codegen:generate --localSchemaFile=schema.json --target=typescript --tagName=gql"
+    "gen-types": "graphql-codegen --config codegen.yml",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -29,63 +33,68 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.4.13",
+    "@apollo/client": "^3.5.5",
     "@gorhom/bottom-sheet": "^4",
     "@helium/crypto-react-native": "^3.43.1",
     "@helium/currency": "^3.25.1",
-    "@react-native-async-storage/async-storage": "^1.15.8",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
     "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
-    "@shopify/restyle": "^1.4.0",
+    "@shopify/restyle": "^1.6.1",
     "apollo3-cache-persist": "^0.13.0",
     "date-fns": "^2.25.0",
-    "expo-haptics": "^10.1.0",
-    "expo-local-authentication": "^11.1.1",
-    "expo-secure-store": "^10.2.0",
-    "expo-splash-screen": "^0.11.4",
-    "graphql": "^15.6.0",
+    "expo": "^43.0.3",
+    "expo-haptics": "~11.0.3",
+    "expo-linking": "~2.4.2",
+    "expo-local-authentication": "~12.0.1",
+    "expo-secure-store": "~11.0.3",
+    "expo-splash-screen": "~0.13.5",
+    "graphql": "^16.0.1",
     "i18next": "^21.1.1",
     "lodash": "^4.17.21",
     "moti": "^0.15.3",
-    "react": "17.0.2",
+    "react": "17.0.1",
     "react-async-hook": "^4.0.0",
     "react-i18next": "^11.12.0",
-    "react-native": "0.65.1",
+    "react-native": "0.66.3",
     "react-native-appstate-hook": "^1.0.6",
     "react-native-config": "^1.4.4",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-icloudstore": "^0.9.0",
     "react-native-jazzicon": "^0.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.4",
     "react-native-navigation-bar-color": "^2.0.1",
-    "react-native-reanimated": "^2.2.2",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.8.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
-    "react-native-svg": "^12.1.1",
-    "react-native-unimodules": "^0.14.8",
+    "react-native-svg": "12.1.1",
     "tinycolor2": "^1.4.2",
     "use-debounce": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
+    "@graphql-codegen/cli": "2.3.0",
+    "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-operations": "^2.2.1",
+    "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@types/graphql": "^14.5.0",
     "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.175",
-    "@types/react-native": "^0.65.0",
+    "@types/react-native": "^0.66.6",
     "@types/react-native-snap-carousel": "^3.8.4",
     "@types/react-test-renderer": "^17.0.1",
     "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
-    "apollo": "^2.33.6",
+    "apollo": "^2.33.9",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.2.0",
@@ -98,7 +107,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^7.0.2",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "lint-staged": "^11.1.2",
     "metro-react-native-babel-preset": "^0.66.2",
@@ -106,7 +115,7 @@
     "react-native-codegen": "^0.0.7",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.3"
+    "typescript": "~4.3.5"
   },
   "resolutions": {
     "@types/react": "^17"
