--- a/ios/nova/Info.plist
+++ b/ios/nova/Info.plist
@@ -40,7 +40,7 @@
 		<key>CFBundleVersion</key>
 		<string>1</string>
 		<key>LSRequiresIPhoneOS</key>
-		<true/>
+		<true />
 		<key>NSAppTransportSecurity</key>
 		<dict>
 			<key>NSExceptionDomains</key>
@@ -48,14 +48,14 @@
 				<key>localhost</key>
 				<dict>
 					<key>NSExceptionAllowsInsecureHTTPLoads</key>
-					<true/>
+					<true />
 				</dict>
 			</dict>
 		</dict>
 		<key>NSFaceIDUsageDescription</key>
 		<string>Allow Helium to authenticate with Face ID</string>
 		<key>NSLocationWhenInUseUsageDescription</key>
-		<string/>
+		<string />
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>UIRequiredDeviceCapabilities</key>
@@ -69,6 +69,33 @@
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
-		<false/>
+		<false />
+		<key>NSFaceIDUsageDescription</key>
+		<string>Allow Helium to authenticate with Face ID</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string />
+		<key>UILaunchStoryboardName</key>
+		<string>LaunchScreen</string>
+		<key>UIRequiredDeviceCapabilities</key>
+		<array>
+			<string>armv7</string>
+		</array>
+		<key>UISupportedInterfaceOrientations</key>
+		<array>
+			<string>UIInterfaceOrientationPortrait</string>
+			<string>UIInterfaceOrientationLandscapeLeft</string>
+			<string>UIInterfaceOrientationLandscapeRight</string>
+		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false />
+		<key>UIAppFonts</key>
+		<array>
+			<string>DMSans-Bold.ttf</string>
+			<string>DMSans-BoldItalic.ttf</string>
+			<string>DMSans-Italic.ttf</string>
+			<string>DMSans-Medium.ttf</string>
+			<string>DMSans-MediumItalic.ttf</string>
+			<string>DMSans-Regular.ttf</string>
+		</array>
 	</dict>
 </plist>
