--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@helium/currency": "^3.45.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
-    "@react-navigation/native": "^6.0.4",
-    "@react-navigation/stack": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
     "@shopify/restyle": "^1.6.1",
     "apollo3-cache-persist": "^0.13.0",
@@ -52,6 +53,7 @@
     "expo-secure-store": "~11.0.3",
     "expo-splash-screen": "~0.13.5",
     "graphql": "^16.0.1",
+    "fuse.js": "^6.4.6",
     "i18next": "^21.1.1",
     "lodash": "^4.17.21",
     "moti": "^0.15.3",
