--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
-    "@gorhom/bottom-sheet": "^4",
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@helium/crypto-react-native": "^3.60.0",
     "@helium/currency": "^3.52.0",
+    "@helium/transactions": "^3.49.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/netinfo": "^7.1.9",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -45,15 +48,22 @@
     "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
     "@shopify/restyle": "^1.6.1",
     "apollo3-cache-persist": "^0.13.0",
+    "base-64": "^1.0.0",
+    "buffer": "^6.0.3",
+    "camelcase-keys": "^7.0.1",
+    "cipher-base": "^1.0.4",
     "date-fns": "^2.25.0",
+    "events": "^3.3.0",
     "expo": "^43.0.3",
     "expo-haptics": "~11.0.3",
     "expo-linking": "~2.4.2",
     "expo-local-authentication": "~12.0.1",
+    "expo-location": "^14.0.1",
+    "expo-permissions": "^13.1.0",
     "expo-secure-store": "~11.0.3",
     "expo-splash-screen": "~0.13.5",
-    "graphql": "^16.0.1",
     "fuse.js": "^6.4.6",
+    "graphql": "^16.0.1",
     "i18next": "^21.1.1",
     "lodash": "^4.17.21",
     "moti": "^0.15.3",
@@ -63,19 +73,25 @@
     "react-native": "0.66.3",
     "react-native-appstate-hook": "^1.0.6",
     "react-native-config": "^1.4.4",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-device-info": "^8.4.8",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-icloudstore": "^0.9.0",
     "react-native-jazzicon": "^0.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.4",
     "react-native-navigation-bar-color": "^2.0.1",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-network-info": "^5.2.1",
+    "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
     "react-native-svg": "12.1.1",
+    "readable-stream": "^3.6.0",
+    "snakecase-keys": "^5.1.2",
+    "stream": "^0.0.2",
     "tinycolor2": "^1.4.2",
     "use-debounce": "^7.0.0"
   },
