--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "clean-start": "yarn start -- --reset-cache",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx && tsc",
     "android-clean": "cd android && ./gradlew clean && cd ..",
@@ -41,6 +43,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/netinfo": "^7.1.9",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -67,17 +70,19 @@
     "i18next": "^21.1.1",
     "lodash": "^4.17.21",
     "moti": "^0.15.3",
+    "patch-package": "^6.4.7",
     "react": "17.0.1",
     "react-async-hook": "^4.0.0",
     "react-i18next": "^11.12.0",
-    "react-native": "0.66.3",
+    "react-native": "0.66.4",
     "react-native-appstate-hook": "^1.0.6",
     "react-native-config": "^1.4.4",
+    "react-native-currency-format": "^1.0.19",
     "react-native-device-info": "^8.4.8",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-icloudstore": "^0.9.0",
     "react-native-jazzicon": "^0.1.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.4",
     "react-native-navigation-bar-color": "^2.0.1",
