--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@helium/transactions": "^3.49.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^7.1.9",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
@@ -95,6 +96,7 @@
     "react-native-sodium": "^0.4.0",
     "react-native-svg": "12.1.1",
     "readable-stream": "^3.6.0",
+    "rn-swipe-button": "^1.3.6",
     "snakecase-keys": "^5.1.2",
     "stream": "^0.0.2",
     "tinycolor2": "^1.4.2",
