--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "@helium/currency": "^3.52.0",
     "@helium/transactions": "^3.49.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^7.1.9",
-    "@react-native-community/blur": "^3.6.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -59,6 +59,7 @@
     "date-fns": "^2.25.0",
     "events": "^3.3.0",
     "expo": "^43.0.3",
+    "expo-blur": "^11.0.0",
     "expo-haptics": "~11.0.3",
     "expo-linking": "~2.4.2",
     "expo-local-authentication": "~12.0.1",
