fix display name (#62)

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "HeliumWallet",
-  "displayName": "Wallet",
+  "displayName": "Helium Wallet",
   "expo": {
     "scheme": "HeliumWallet"
   }
