--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@gorhom/bottom-sheet": "^4.1.5",
     "@helium/crypto-react-native": "^3.60.0",
     "@helium/currency": "^3.52.0",
+    "@helium/onboarding": "^3.59.0",
     "@helium/transactions": "^3.49.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
@@ -51,6 +52,7 @@
     "@react-navigation/stack": "^6.0.11",
     "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
     "@shopify/restyle": "^1.6.1",
+    "angry-purple-tiger": "^1.0.5",
     "apollo3-cache-persist": "^0.13.0",
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
