Add maker app linking and signing (#72)
Create LinkWallet component that creates a token for external app signature requests.
Add hotspot signing.

--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "HeliumWallet",
   "displayName": "Helium Wallet",
   "expo": {
-    "scheme": "HeliumWallet"
+    "scheme": "heliumwallet"
   }
 }
