--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "@gorhom/bottom-sheet": "^4.1.5",
     "@helium/crypto-react-native": "^3.60.0",
     "@helium/currency": "^3.52.0",
+    "@helium/http": "^3.63.0",
     "@helium/onboarding": "^3.59.0",
+    "@helium/proto-ble": "^3.37.0",
+    "@helium/react-native-sdk": "^0.2.1",
     "@helium/transactions": "^3.49.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
@@ -57,7 +60,6 @@
     "base-64": "^1.0.0",
     "buffer": "^6.0.3",
     "camelcase-keys": "^7.0.1",
-    "cipher-base": "^1.0.4",
     "date-fns": "^2.25.0",
     "events": "^3.3.0",
     "expo": "^43.0.3",
@@ -71,6 +73,7 @@
     "expo-splash-screen": "~0.13.5",
     "fuse.js": "^6.4.6",
     "graphql": "^16.0.1",
+    "h3-js": "^3.7.2",
     "i18next": "^21.1.1",
     "lodash": "^4.17.21",
     "moti": "^0.15.3",
@@ -80,10 +83,12 @@
     "react-i18next": "^11.12.0",
     "react-native": "0.66.4",
     "react-native-appstate-hook": "^1.0.6",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-config": "^1.4.4",
     "react-native-currency-format": "^1.0.19",
     "react-native-device-info": "^8.4.8",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-icloudstore": "^0.9.0",
     "react-native-jazzicon": "^0.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
