--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "lodash": "^4.17.21",
     "moti": "^0.15.3",
     "patch-package": "^6.4.7",
+    "qs": "^6.10.3",
     "react": "17.0.1",
     "react-async-hook": "^4.0.0",
     "react-i18next": "^11.12.0",
@@ -103,6 +104,7 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
     "react-native-svg": "12.1.1",
+    "react-qr-code": "^2.0.3",
     "readable-stream": "^3.6.0",
     "rn-swipe-button": "^1.3.6",
     "snakecase-keys": "^5.1.2",
@@ -121,6 +123,7 @@
     "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.175",
+    "@types/qs": "^6.9.7",
     "@types/react-native": "^0.66.6",
     "@types/react-native-snap-carousel": "^3.8.4",
     "@types/react-test-renderer": "^17.0.1",
