--- a/ios/HeliumWalletTests/Info.plist
+++ b/ios/HeliumWalletTests/Info.plist
@@ -20,5 +20,22 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Allow Helium Wallet to connect to and manage your Hotspots</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Allow Helium Wallet to connect to and manage your Hotspots</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Allow Helium Wallet to authenticate with Face ID</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
