--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-video": "^5.2.0",
     "react-qr-code": "^2.0.3",
     "readable-stream": "^3.6.0",
     "rn-swipe-button": "^1.3.6",
@@ -126,6 +127,7 @@
     "@types/qs": "^6.9.7",
     "@types/react-native": "^0.66.6",
     "@types/react-native-snap-carousel": "^3.8.4",
+    "@types/react-native-video": "^5.0.12",
     "@types/react-test-renderer": "^17.0.1",
     "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
