--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,3 +51,7 @@ target 'HeliumWallet' do
 
   end
 end
+
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignalXCFramework', '>= 3.0', '< 4.0'
+end
