--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "angry-purple-tiger": "^1.0.5",
     "apollo3-cache-persist": "^0.13.0",
     "base-64": "^1.0.0",
+    "bcrypt-react-native": "^1.1.1",
     "buffer": "^6.0.3",
     "camelcase-keys": "^7.0.1",
     "date-fns": "^2.25.0",
@@ -97,6 +98,7 @@
     "react-native-localize": "^2.1.4",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-network-info": "^5.2.1",
+    "react-native-onesignal": "^4.3.7",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
