--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
+    "@sentry/react-native": "^3.3.0",
     "@shopify/restyle": "^1.6.1",
     "angry-purple-tiger": "^1.0.5",
     "apollo3-cache-persist": "^0.13.0",
