--- a/ios/HeliumWallet/HeliumWallet.entitlements
+++ b/ios/HeliumWallet/HeliumWallet.entitlements
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>aps-environment</key>
-	<string>development</string>
-	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array/>
-	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
-	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
-	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.com.helium.wallet.app.onesignal</string>
-	</array>
-    <key>com.apple.developer.associated-domains</key>
-    <array>
-        <string>applinks:helium.com</string>
-    </array>
-</dict>
+	<dict>
+		<key>aps-environment</key>
+		<string>development</string>
+		<key>com.apple.developer.icloud-container-identifiers</key>
+		<array />
+		<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+		<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+		<key>com.apple.security.application-groups</key>
+		<array>
+			<string>group.com.helium.wallet.app.onesignal</string>
+		</array>
+		<key>com.apple.developer.associated-domains</key>
+		<array>
+			<string>applinks:wallet.helium.com</string>
+		</array>
+	</dict>
 </plist>
