--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,6 +34,10 @@ allprojects {
             url(new File(["node", "--print", "require.resolve('jsc-android/package.json')"].execute(null, rootDir).text.trim(), "../dist"))
         }
 
+        maven {
+            // expo-camera bundles a custom com.google.android:cameraview
+            url "$rootDir/../node_modules/expo-camera/android/maven"
+        }
         google()
         maven { url 'https://www.jitpack.io' }
     }
