--- a/ios/HeliumWallet/Info.plist
+++ b/ios/HeliumWallet/Info.plist
@@ -57,6 +57,8 @@
 				</dict>
 			</dict>
 		</dict>
+		<key>NSCameraUsageDescription</key>
+		<string>Allow Helium to use the camera to scan QR codes</string>
 		<key>NSFaceIDUsageDescription</key>
 		<string>Allow Helium to authenticate with Face ID</string>
 		<key>NSLocationAlwaysUsageDescription</key>
@@ -72,10 +74,10 @@
 			<string>DMSans-MediumItalic.ttf</string>
 			<string>DMSans-Regular.ttf</string>
 		</array>
-        <key>UIBackgroundModes</key>
-        <array>
-            <string>remote-notification</string>
-        </array>
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>remote-notification</string>
+		</array>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>NSBluetoothAlwaysUsageDescription</key>
