--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "date-fns": "^2.25.0",
     "events": "^3.3.0",
     "expo": "^43.0.3",
+    "expo-barcode-scanner": "^11.2.1",
     "expo-blur": "^11.0.0",
+    "expo-camera": "^12.1.2",
     "expo-haptics": "~11.0.3",
     "expo-linking": "~2.4.2",
     "expo-local-authentication": "~12.0.1",
