--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@helium/proto-ble": "^3.37.0",
     "@helium/react-native-sdk": "^0.2.1",
     "@helium/transactions": "^3.49.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "^1.16.2",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
@@ -93,6 +93,7 @@
     "react-native-config": "^1.4.4",
     "react-native-currency-format": "^1.0.19",
     "react-native-device-info": "^8.4.8",
+    "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-get-random-values": "^1.7.2",
     "react-native-icloudstore": "^0.9.0",
