--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
     "@helium/proto-ble": "^3.37.0",
     "@helium/react-native-sdk": "^0.2.1",
     "@helium/transactions": "^3.49.1",
+    "@ledgerhq/hw-app-helium": "^6.26.0",
+    "@ledgerhq/react-native-hw-transport-ble": "^6.25.1",
     "@react-native-async-storage/async-storage": "^1.16.2",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/netinfo": "^7.1.9",
-    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
-    "@robinbobin/react-native-google-drive-api-wrapper": "^0.6.0",
     "@sentry/react-native": "^3.3.0",
     "@shopify/restyle": "^1.6.1",
     "angry-purple-tiger": "^1.0.5",
@@ -116,6 +116,7 @@
     "react-qr-code": "^2.0.3",
     "readable-stream": "^3.6.0",
     "rn-swipe-button": "^1.3.6",
+    "rxjs": "^7.5.4",
     "snakecase-keys": "^5.1.2",
     "stream": "^0.0.2",
     "tinycolor2": "^1.4.2",
