--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "expo-barcode-scanner": "^11.2.1",
     "expo-blur": "^11.0.0",
     "expo-camera": "^12.1.2",
+    "expo-constants": "^13.0.2",
     "expo-haptics": "~11.0.3",
     "expo-linking": "~2.4.2",
     "expo-local-authentication": "~12.0.1",
