--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.5.5",
+    "@apollo/client": "~3.5.5",
     "@gorhom/bottom-sheet": "^4.1.5",
     "@helium/address": "^4.0.0",
     "@helium/crypto-react-native": "^4.1.0",
