--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "0.0.1",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install",
@@ -191,6 +191,7 @@
     "lint-staged": "^11.1.2",
     "metro-react-native-babel-preset": "^0.66.2",
     "prettier": "^2.4.1",
+    "react-native-cli-bump-version": "^1.4.0",
     "react-native-codegen": "^0.0.7",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.2",
