Update wallet connect to latest beta. (#237)
* Update wallet connect to latest beta.

* Rework login flow for latest wallet connect beta.

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@shopify/restyle": "^1.6.1",
     "@stripe/stripe-react-native": "^0.11.0",
     "@tradle/react-native-http": "^2.0.0",
-    "@walletconnect/client": "^2.0.0-beta.26",
-    "@walletconnect/types": "2.0.0-beta.26",
+    "@walletconnect/sign-client": "^2.0.0-beta.100",
+    "@walletconnect/types": "2.0.0-beta.100",
     "angry-purple-tiger": "^1.0.5",
     "apollo3-cache-persist": "^0.13.0",
     "assert": "^1.1.1",
