Feature/ios widget (#238)
* iOS widget checkpoint

* Connect nova wallet api and deep link widget to app

* Port over existing balance widget from hotspot app

* Replace helium api calls with graphql for helium balance widget

* Address todos

* Remove watch app

* Fix ISO dates for api requests & format amounts

* Fix hnt logo

* Small fix for formatter

* Reload widget when app closes

* Change Wallet Widget Title

* Address comments

* Add profile icons to medium & large widgets

* Address more comments

* Lint swift files

* Remove widget bridge

* Switch balance widget to only support dark mode

* Add bridging header and pull url from .env

* Add testnet support to iOS widget

* Fix generation of graphql files & add ReactNativeConfig

* Fix issue where incorrect DC balance was being displayed

* Set DC price fixed to 0.00001

* Move apollo build phases to main package & address comments

* Add fromBones extension

* Remove BalanceToDecimal function for fromBones extension

Co-authored-by: Luis Perrone <peronif5@luiss-mbp.attlocal.net>
Co-authored-by: Luis Perrone <peronif5@Luiss-MBP.lan>
Co-authored-by: Luis Perrone <peronif5@Luiss-MacBook-Pro.local>

--- a/ios/HeliumWallet/Info.plist
+++ b/ios/HeliumWallet/Info.plist
@@ -69,6 +69,10 @@
 	<string>Allow Location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Allow Location</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>ConfigurationIntent</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>DMSans-Bold.ttf</string>
