--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bump-major": "npx react-native bump-version --skip-semver-for android --skip-code-for all --type major",
     "prettier": "prettier --write *.ts*",
     "gen-types": "graphql-codegen --config codegen.yml",
+    "gen-types:ios": "rover graph introspect https://wallet-api.helium.com/api/graphiql > ios/schema.gql && ios/Pods/Apollo/scripts/run-bundled-codegen.sh codegen:generate --target=swift --includes='./**/WidgetData.graphql' --localSchemaFile='ios/schema.gql' ios/HeliumWalletWidget/API/API.swift && npx swiftformat .",
+    "gen-types:all": "yarn gen-types && yarn gen-types:ios",
     "prepare": "husky install"
   },
   "husky": {
@@ -132,6 +134,7 @@
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-shared-group-preferences": "^1.1.23",
     "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
@@ -155,6 +158,7 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
+    "@apollo/rover": "^0.7.0",
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@graphql-codegen/cli": "2.3.0",
@@ -168,13 +172,14 @@
     "@types/lodash": "^4.14.175",
     "@types/qs": "^6.9.7",
     "@types/react-native": "^0.66.6",
+    "@types/react-native-shared-group-preferences": "^1.1.1",
     "@types/react-native-snap-carousel": "^3.8.4",
     "@types/react-native-video": "^5.0.12",
     "@types/react-test-renderer": "^17.0.1",
     "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
-    "apollo": "^2.33.9",
+    "apollo": "^2.34.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.2.0",
