Upgrade wallect connect and use new react-native-compat library. (#271)
* Upgrade wallect connect and use new react-native-compat library.

* Update wallet connect types package.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
     "@ledgerhq/react-native-hid": "^6.28.3",
     "@ledgerhq/react-native-hw-transport-ble": "^6.27.1",
-    "@react-native-async-storage/async-storage": "^1.16.2",
+    "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-native-community/blur": "^4.0.0",
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/clipboard": "^1.5.1",
@@ -64,8 +64,9 @@
     "@shopify/restyle": "^1.6.1",
     "@stripe/stripe-react-native": "^0.11.0",
     "@tradle/react-native-http": "^2.0.0",
-    "@walletconnect/sign-client": "^2.0.0-beta.100",
-    "@walletconnect/types": "2.0.0-beta.100",
+    "@walletconnect/react-native-compat": "^2.0.0-rc.2",
+    "@walletconnect/sign-client": "^2.0.0-rc.2",
+    "@walletconnect/types": "2.0.0-rc.2",
     "angry-purple-tiger": "^1.0.5",
     "apollo3-cache-persist": "^0.13.0",
     "assert": "^1.1.1",
@@ -120,7 +121,7 @@
     "react-native-device-info": "^8.4.8",
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.2.0",
-    "react-native-get-random-values": "^1.7.2",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-icloudstore": "^0.9.0",
     "react-native-jazzicon": "^0.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
