Multi token layout (#277)
* extract accounts carousel

* extract account activity sheet

* accounts top nav

* wip multi token layout

* fix

* action bar and currency balances

* filter action sheet, skeleton

* update generated graphql types

* fix account loading logic

* fix portal provider placement

* add conditional logic to action bar

* handle testnet balances

* make background of actionsheet close on press

* updates based on feedback

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@apollo/client": "~3.5.5",
     "@gorhom/bottom-sheet": "^4.1.5",
+    "@gorhom/portal": "^1.0.14",
     "@helium/address": "^4.6.2",
     "@helium/crypto-react-native": "^4.6.2",
     "@helium/currency": "^4.7.3",
