lock deps and remove sentry (#278)

--- a/package.json
+++ b/package.json
@@ -37,180 +37,179 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "~3.5.5",
-    "@gorhom/bottom-sheet": "^4.1.5",
-    "@gorhom/portal": "^1.0.14",
-    "@helium/address": "^4.6.2",
-    "@helium/crypto-react-native": "^4.6.2",
-    "@helium/currency": "^4.7.3",
-    "@helium/http": "^4.7.5",
-    "@helium/onboarding": "^4.6.2",
-    "@helium/proto-ble": "^4.0.0",
-    "@helium/react-native-sdk": "^1.0.0",
-    "@helium/transactions": "^4.7.5",
-    "@helium/wallet-link": "^4.7.5",
+    "@apollo/client": "3.5.10",
+    "@gorhom/bottom-sheet": "4.4.3",
+    "@gorhom/portal": "1.0.14",
+    "@helium/address": "4.6.2",
+    "@helium/crypto-react-native": "4.6.2",
+    "@helium/currency": "4.7.3",
+    "@helium/http": "4.7.5",
+    "@helium/onboarding": "4.6.2",
+    "@helium/proto-ble": "4.0.0",
+    "@helium/react-native-sdk": "1.0.0",
+    "@helium/transactions": "4.7.1",
+    "@helium/wallet-link": "4.7.5",
     "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
-    "@ledgerhq/react-native-hid": "^6.28.3",
-    "@ledgerhq/react-native-hw-transport-ble": "^6.27.1",
-    "@react-native-async-storage/async-storage": "^1.17.9",
-    "@react-native-community/blur": "^4.0.0",
-    "@react-native-community/checkbox": "^0.5.12",
-    "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/hooks": "^2.8.1",
-    "@react-native-community/netinfo": "^7.1.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "@react-navigation/stack": "^6.0.11",
-    "@sentry/react-native": "^3.3.0",
-    "@shopify/restyle": "^1.6.1",
-    "@stripe/stripe-react-native": "^0.14.0",
-    "@tradle/react-native-http": "^2.0.0",
-    "@walletconnect/react-native-compat": "^2.0.0-rc.2",
-    "@walletconnect/sign-client": "^2.0.0-rc.2",
+    "@ledgerhq/react-native-hid": "6.28.4",
+    "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
+    "@react-native-async-storage/async-storage": "1.17.9",
+    "@react-native-community/blur": "4.2.0",
+    "@react-native-community/checkbox": "0.5.12",
+    "@react-native-community/clipboard": "1.5.1",
+    "@react-native-community/hooks": "2.8.1",
+    "@react-native-community/netinfo": "7.1.12",
+    "@react-navigation/native": "6.0.11",
+    "@react-navigation/native-stack": "6.7.0",
+    "@react-navigation/stack": "6.2.2",
+    "@shopify/restyle": "1.8.0",
+    "@stripe/stripe-react-native": "0.14.0",
+    "@tradle/react-native-http": "2.0.1",
+    "@walletconnect/react-native-compat": "2.0.0-rc.2",
+    "@walletconnect/sign-client": "2.0.0-rc.2",
     "@walletconnect/types": "2.0.0-rc.2",
-    "angry-purple-tiger": "^1.0.5",
-    "apollo3-cache-persist": "^0.13.0",
-    "assert": "^1.1.1",
-    "asyncstorage-down": "^4.2.0",
-    "base-64": "^1.0.0",
-    "bcrypt-react-native": "^1.1.1",
-    "bignumber.js": "^9.0.2",
-    "browserify-zlib": "~0.1.4",
-    "bs58": "^5.0.0",
-    "buffer": "^6.0.3",
-    "camelcase-keys": "^7.0.1",
-    "console-browserify": "^1.1.0",
-    "constants-browserify": "^1.0.0",
-    "crypto": "^1.0.1",
-    "date-fns": "^2.25.0",
-    "dns.js": "^1.0.1",
-    "domain-browser": "^1.1.1",
-    "events": "^3.3.0",
-    "expo": "^43.0.3",
-    "expo-barcode-scanner": "^11.2.1",
-    "expo-camera": "^12.1.2",
-    "expo-constants": "^13.0.2",
-    "expo-haptics": "~11.0.3",
-    "expo-linking": "~2.4.2",
-    "expo-local-authentication": "~12.0.1",
-    "expo-permissions": "^13.1.0",
-    "expo-secure-store": "~11.0.3",
-    "expo-splash-screen": "~0.13.5",
-    "fuse.js": "^6.4.6",
-    "graphql": "^16.0.1",
-    "h3-js": "^3.7.2",
-    "https-browserify": "~0.0.0",
-    "i18next": "^21.1.1",
-    "lodash": "^4.17.21",
-    "long": "^5.2.0",
-    "moti": "^0.15.3",
-    "parse5": "^6.0.1",
-    "patch-package": "^6.4.7",
+    "angry-purple-tiger": "1.0.5",
+    "apollo3-cache-persist": "0.13.0",
+    "assert": "1.5.0",
+    "asyncstorage-down": "4.2.0",
+    "base-64": "1.0.0",
+    "bcrypt-react-native": "1.1.1",
+    "bignumber.js": "9.1.0",
+    "browserify-zlib": "0.1.4",
+    "bs58": "5.0.0",
+    "buffer": "6.0.3",
+    "camelcase-keys": "7.0.2",
+    "console-browserify": "1.2.0",
+    "constants-browserify": "1.0.0",
+    "crypto": "1.0.1",
+    "date-fns": "2.29.2",
+    "dns.js": "1.0.1",
+    "domain-browser": "1.2.0",
+    "events": "3.3.0",
+    "expo": "43.0.5",
+    "expo-barcode-scanner": "11.4.0",
+    "expo-camera": "12.3.0",
+    "expo-constants": "13.2.3",
+    "expo-haptics": "11.0.3",
+    "expo-linking": "2.4.2",
+    "expo-local-authentication": "12.0.1",
+    "expo-permissions": "13.2.0",
+    "expo-secure-store": "11.0.3",
+    "expo-splash-screen": "0.13.5",
+    "fuse.js": "6.6.2",
+    "graphql": "16.6.0",
+    "h3-js": "3.7.2",
+    "https-browserify": "0.0.1",
+    "i18next": "21.9.1",
+    "lodash": "4.17.21",
+    "long": "5.2.0",
+    "moti": "0.15.3",
+    "parse5": "6.0.1",
+    "patch-package": "6.4.7",
     "path-browserify": "0.0.0",
-    "punycode": "^1.2.4",
-    "qs": "^6.10.3",
-    "query-string": "^7.1.1",
-    "querystring-es3": "~0.2.0",
+    "punycode": "1.4.1",
+    "qs": "6.11.0",
+    "query-string": "7.1.1",
+    "querystring-es3": "0.2.1",
     "react": "17.0.1",
-    "react-async-hook": "^4.0.0",
-    "react-i18next": "^11.12.0",
+    "react-async-hook": "4.0.0",
+    "react-i18next": "11.18.4",
     "react-native": "0.66.4",
-    "react-native-appstate-hook": "^1.0.6",
-    "react-native-ble-plx": "^2.0.3",
-    "react-native-config": "^1.4.4",
-    "react-native-crypto": "^2.2.0",
-    "react-native-currency-format": "^1.0.19",
-    "react-native-device-info": "^8.4.8",
-    "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "^2.2.0",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-icloudstore": "^0.9.0",
-    "react-native-jazzicon": "^0.1.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-level-fs": "^3.0.0",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-localize": "^2.1.4",
-    "react-native-navigation-bar-color": "^2.0.1",
-    "react-native-network-info": "^5.2.1",
-    "react-native-onesignal": "^4.3.7",
-    "react-native-os": "^1.0.1",
-    "react-native-randombytes": "^3.0.0",
-    "react-native-reanimated": "^2.3.0",
+    "react-native-appstate-hook": "1.0.6",
+    "react-native-ble-plx": "2.0.3",
+    "react-native-config": "1.4.6",
+    "react-native-crypto": "2.2.0",
+    "react-native-currency-format": "1.0.19",
+    "react-native-device-info": "8.7.1",
+    "react-native-flash-message": "0.2.1",
+    "react-native-gesture-handler": "2.5.0",
+    "react-native-get-random-values": "1.8.0",
+    "react-native-icloudstore": "0.9.0",
+    "react-native-jazzicon": "0.1.2",
+    "react-native-keyboard-aware-scroll-view": "0.9.5",
+    "react-native-level-fs": "3.0.1",
+    "react-native-linear-gradient": "2.6.2",
+    "react-native-localize": "2.2.3",
+    "react-native-navigation-bar-color": "2.0.1",
+    "react-native-network-info": "5.2.1",
+    "react-native-onesignal": "4.4.1",
+    "react-native-os": "1.2.6",
+    "react-native-randombytes": "3.6.1",
+    "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-shared-group-preferences": "^1.1.23",
-    "react-native-simple-toast": "^1.1.3",
-    "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-sodium": "^0.4.0",
+    "react-native-screens": "3.8.0",
+    "react-native-shared-group-preferences": "1.1.23",
+    "react-native-simple-toast": "1.1.4",
+    "react-native-snap-carousel": "4.0.0-beta.6",
+    "react-native-sodium": "0.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-tcp": "^3.2.1",
-    "react-native-udp": "^2.1.0",
-    "react-native-video": "^5.2.0",
-    "react-qr-code": "^2.0.3",
-    "readable-stream": "^3.6.0",
-    "rn-swipe-button": "^1.3.6",
-    "rxjs": "^7.5.4",
-    "snakecase-keys": "^5.1.2",
-    "stream": "^0.0.2",
-    "stream-browserify": "^1.0.0",
-    "string_decoder": "~0.10.25",
-    "timers-browserify": "^1.0.1",
-    "tinycolor2": "^1.4.2",
+    "react-native-tcp": "3.3.2",
+    "react-native-udp": "2.7.0",
+    "react-native-video": "5.2.0",
+    "react-qr-code": "2.0.7",
+    "readable-stream": "3.6.0",
+    "rn-swipe-button": "1.3.7",
+    "rxjs": "7.5.6",
+    "snakecase-keys": "5.4.2",
+    "stream": "0.0.2",
+    "stream-browserify": "1.0.0",
+    "string_decoder": "0.10.31",
+    "timers-browserify": "1.4.2",
+    "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
-    "url": "~0.10.1",
-    "use-debounce": "^7.0.0",
+    "url": "0.10.3",
+    "use-debounce": "7.0.1",
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@apollo/rover": "^0.7.0",
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@apollo/rover": "0.7.0",
+    "@babel/core": "7.18.10",
+    "@babel/runtime": "7.18.9",
     "@graphql-codegen/cli": "2.3.0",
     "@graphql-codegen/typescript": "2.4.1",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
+    "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
-    "@ledgerhq/hw-transport-mocker": "^6.27.1",
-    "@types/graphql": "^14.5.0",
-    "@types/i18n-js": "^3.8.2",
-    "@types/jest": "^26.0.23",
-    "@types/lodash": "^4.14.175",
-    "@types/parse5": "^5.0.3",
-    "@types/qs": "^6.9.7",
-    "@types/react-native": "^0.66.6",
-    "@types/react-native-shared-group-preferences": "^1.1.1",
-    "@types/react-native-snap-carousel": "^3.8.4",
-    "@types/react-native-video": "^5.0.12",
-    "@types/react-test-renderer": "^17.0.1",
-    "@types/tinycolor2": "^1.4.3",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "apollo": "^2.34.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^7.2.0",
+    "@ledgerhq/hw-transport-mocker": "6.27.2",
+    "@types/graphql": "14.5.0",
+    "@types/i18n-js": "3.8.2",
+    "@types/jest": "26.0.24",
+    "@types/lodash": "4.14.183",
+    "@types/parse5": "5.0.3",
+    "@types/qs": "6.9.7",
+    "@types/react-native": "0.66.21",
+    "@types/react-native-shared-group-preferences": "1.1.1",
+    "@types/react-native-snap-carousel": "3.8.5",
+    "@types/react-native-video": "5.0.14",
+    "@types/react-test-renderer": "17.0.2",
+    "@types/tinycolor2": "1.4.3",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "apollo": "2.34.0",
+    "babel-jest": "26.6.3",
+    "babel-plugin-module-resolver": "4.1.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.4.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^7.0.4",
-    "jest": "^26.6.3",
-    "lint-staged": "^11.1.2",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "prettier": "^2.4.1",
-    "react-native-cli-bump-version": "^1.4.0",
-    "react-native-codegen": "^0.0.7",
-    "react-native-svg-transformer": "^0.14.3",
+    "eslint-config-airbnb-typescript": "14.0.2",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "24.7.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "husky": "7.0.4",
+    "jest": "26.6.3",
+    "lint-staged": "11.2.6",
+    "metro-react-native-babel-preset": "0.66.2",
+    "prettier": "2.7.1",
+    "react-native-cli-bump-version": "1.5.0",
+    "react-native-codegen": "0.0.7",
+    "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "17.0.2",
-    "rn-nodeify": "^10.3.0",
-    "typescript": "~4.3.5"
+    "rn-nodeify": "10.3.0",
+    "typescript": "4.3.5"
   },
   "resolutions": {
-    "@types/react": "^17",
+    "@types/react": "17",
     "@helium/transactions": "4.7.1"
   },
   "jest": {
