Add fix to podfile for xcode 14 (#321)

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,7 +31,24 @@ target 'HeliumWallet' do
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
 
+    # Get main project development team id
+    dev_team = ""
+    project = installer.aggregate_targets[0].user_project
+    project.targets.each do |target|
+        target.build_configurations.each do |config|
+            if dev_team.empty? and !config.build_settings['DEVELOPMENT_TEAM'].nil?
+                dev_team = config.build_settings['DEVELOPMENT_TEAM']
+            end
+        end
+    end
+
     installer.pods_project.targets.each do |target|
+      # Fix bundle targets' 'Signing Certificate' to 'Sign to Run Locally'
+      if target.respond_to?(:product_type) and target.product_type == "com.apple.product-type.bundle"
+        target.build_configurations.each do |config|
+            config.build_settings['DEVELOPMENT_TEAM'] = dev_team
+        end
+      end
       target.build_configurations.each do |config|
         config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
       end
