Feature/add nfts (#17)
Co-authored-by: Luis Perrone <perronef5@users.noreply.github.com>
Co-authored-by: Matt Reetz <matt@helium.com>

--- a/package.json
+++ b/package.json
@@ -42,16 +42,17 @@
     "@gorhom/portal": "1.0.14",
     "@helium/address": "4.6.2",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency": "4.8.1",
+    "@helium/currency": "^4.8.1",
     "@helium/http": "4.7.5",
     "@helium/onboarding": "4.6.2",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "1.0.0",
     "@helium/transactions": "4.7.5",
-    "@helium/wallet-link": "4.7.5",
+    "@helium/wallet-link": "^4.8.1",
     "@ledgerhq/hw-app-helium": "6.28.0-nightly.0",
     "@ledgerhq/react-native-hid": "6.28.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.27.2",
+    "@metaplex-foundation/js": "^0.16.0",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-community/blur": "4.2.0",
     "@react-native-community/checkbox": "0.5.12",
@@ -161,6 +162,7 @@
     "stream": "0.0.2",
     "stream-browserify": "1.0.0",
     "string_decoder": "0.10.31",
+    "text-encoding-polyfill": "^0.6.7",
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
